--- a/Installer_Src/Setup DreamWorld/packages.config
+++ b/Installer_Src/Setup DreamWorld/packages.config
@@ -14,7 +14,7 @@
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="MimeKit" version="2.13.0" targetFramework="net472" />
   <package id="MSChartWrapper" version="1.0.0.1" targetFramework="net48" />
-  <package id="MySql.Data" version="8.0.24" targetFramework="net472" />
+  <package id="MySqlConnector" version="1.3.12" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
   <package id="Portable.BouncyCastle" version="1.8.10" targetFramework="net472" />
   <package id="SSH.NET" version="2020.0.1" targetFramework="net472" />
