--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 Outworldzfiles/Opensim/.git
 Outworldzfiles/Freeswitch
 Outworldzfiles/Autobackup
+Outworldzfiles/Apache/htdocs/Stats/Maps
 /DreamGridUpdater.exe
 DotNetZip.dll
 DotNetZip.xml
