--- a/Installer_Src/Setup DreamWorld/packages.config
+++ b/Installer_Src/Setup DreamWorld/packages.config
@@ -6,13 +6,13 @@
   <package id="Google.Protobuf" version="3.18.1" targetFramework="net472" />
   <package id="Humanizer.Core" version="2.11.10" targetFramework="net48" />
   <package id="ini-parser" version="2.5.2" targetFramework="net48" />
-  <package id="K4os.Compression.LZ4" version="1.2.12" targetFramework="net472" />
-  <package id="K4os.Compression.LZ4.Streams" version="1.2.12" targetFramework="net472" />
+  <package id="K4os.Compression.LZ4" version="1.2.13" targetFramework="net48" />
+  <package id="K4os.Compression.LZ4.Streams" version="1.2.13" targetFramework="net48" />
   <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net472" />
   <package id="MailKit" version="2.15.0" targetFramework="net472" requireReinstallation="true" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="3.3.2" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net472" />
-  <package id="MimeKit" version="2.15.1" targetFramework="net472" requireReinstallation="true" />
+  <package id="MimeKit" version="2.15.1" targetFramework="net48" />
   <package id="MSChartWrapper" version="1.0.0.1" targetFramework="net48" />
   <package id="MySqlConnector" version="1.3.13" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
