--- a/Installer_Src/Setup DreamWorld/packages.config
+++ b/Installer_Src/Setup DreamWorld/packages.config
@@ -9,7 +9,7 @@
   <package id="K4os.Compression.LZ4" version="1.2.13" targetFramework="net48" />
   <package id="K4os.Compression.LZ4.Streams" version="1.2.13" targetFramework="net48" />
   <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net472" />
-  <package id="MailKit" version="2.15.0" targetFramework="net472" requireReinstallation="true" />
+  <package id="MailKit" version="2.15.0" targetFramework="net48" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="3.3.2" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="MimeKit" version="2.15.1" targetFramework="net48" />
