--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -54,7 +54,7 @@ ApachePort=80
 
 ;
 ;Password from DYN DNS
-MachineID=589862912ώ
+MachineID=219944112
 
 ;
 ; * The startup section lists all the connectors to start up in this server
@@ -376,8 +376,6 @@ AssetService="OpenSim.Services.AssetService.dll:AssetService"
 ;; Set by Dreamgrid
 ;;
 ; START  <= Leave this line
-Region_Test=FallbackRegion
-Region_TestMap=FallbackRegion
 Region_Welcome=DefaultRegion,  DefaultHGRegion
 
 ; END  <= Leave this line
@@ -895,7 +893,9 @@ SMTP_SERVER_PASSWORD=Some Password
 ;; Set to True to enable Smart Start
 ;; Set by Dreamgrid
 [SmartStart]
-Enabled=False
+Enabled=True
+URL=http://192.168.2.139:8001
+MachineID=219944112
 
 ;; For Joomla/jOpensim
 [CapsService]
