--- a/Installer_Src/Setup DreamWorld/.editorconfig
+++ b/Installer_Src/Setup DreamWorld/.editorconfig
@@ -6,3 +6,6 @@ dotnet_diagnostic.CA1031.severity = silent
 
 # BC30136: Error creating Win32 resources: Icon stream is not in the expected format.
 dotnet_diagnostic.BC30136.severity = error
+
+# CA2100: Review if the query string passed to 'Sub MySqlCommand.New(commandText As String, connection As MySqlConnection)' in 'DeleteContent', accepts any user input
+dotnet_diagnostic.CA2100.severity = suggestion
