--- a/Installer_Src/Setup DreamWorld/packages.config
+++ b/Installer_Src/Setup DreamWorld/packages.config
@@ -1,17 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.9" targetFramework="net472" />
-  <package id="DotNetZip" version="1.15.0" targetFramework="net48" />
+  <package id="DotNetZip" version="1.16.0" targetFramework="net48" />
   <package id="EmailValidation" version="1.0.6" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.19.1" targetFramework="net48" />
-  <package id="Humanizer.Core" version="2.11.10" targetFramework="net48" />
+  <package id="Humanizer.Core" version="2.13.14" targetFramework="net48" />
   <package id="ini-parser" version="2.5.2" targetFramework="net48" />
   <package id="K4os.Compression.LZ4" version="1.2.15" targetFramework="net48" />
   <package id="K4os.Compression.LZ4.Streams" version="1.2.15" targetFramework="net48" />
   <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net472" />
   <package id="MailKit" version="2.15.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net48" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="3.3.3" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.VisualStudio.Threading" version="17.0.64" targetFramework="net48" />
+  <package id="Microsoft.VisualStudio.Threading.Analyzers" version="17.0.64" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.VisualStudio.Validation" version="17.0.34" targetFramework="net48" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net48" />
   <package id="MimeKit" version="2.15.1" targetFramework="net48" />
   <package id="MSChartWrapper" version="1.0.0.1" targetFramework="net48" />
   <package id="MySqlConnector" version="2.0.0" targetFramework="net48" />
@@ -34,10 +39,12 @@
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Security.AccessControl" version="6.0.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net472" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net472" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
