All files CodeMaid cleanup. There is a codemaid setting in the src so you can be consistent if you use it

--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -332,7 +332,7 @@
     <Compile Include="Apache.vb" />
     <Compile Include="Backup.vb" />
     <Compile Include="Backups.vb" />
-    <Compile Include="Banchmark.vb" />
+    <Compile Include="Benchmark.vb" />
     <Compile Include="Birds.vb" />
     <Compile Include="BreakPoint.vb" />
     <Compile Include="ClassIni.vb" />
