Add verbose to log sim rebuild

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ Outworldzfiles/Opensim/.git
 Outworldzfiles/Freeswitch
 Outworldzfiles/Autobackup
 Outworldzfiles/Apache/htdocs/Stats/Maps
+Outworldzfiles/Apache/htdocs/Audio/Alexandria
 /DreamGridUpdater.exe
 DotNetZip.dll
 DotNetZip.xml
