Bug refactor for Endless Land and sea

--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -54,7 +54,7 @@ ApachePort=80
 
 ;
 ;Password from DYN DNS
-MachineID=219944112
+MachineID=209754288
 
 ;
 ; * The startup section lists all the connectors to start up in this server
@@ -376,7 +376,8 @@ AssetService="OpenSim.Services.AssetService.dll:AssetService"
 ;; Set by Dreamgrid
 ;;
 ; START  <= Leave this line
-Region_Terrains=DefaultRegion,  DefaultHGRegion
+Region_Smart=Persistent
+Region_Welcome=DefaultRegion,  DefaultHGRegion
 
 ; END  <= Leave this line
 ;; Allow Hyperlinks to be created at the console
@@ -653,7 +654,7 @@ gridnick=${Const|GridName}
 ;                       this as splash page
 ;; Set by Dreamgrid
 ;welcome = ${Const|BaseURL}:${Const|PublicPort}/JOpensim/index.php?option=com_opensim
-welcome=https://outworldz.com/Outworldz_installer/Welcome.htm
+welcome=http://outworldz.com/Outworldz_installer/Welcome.htm
 
 ; helper uri: optional: if it exists it will be used to tell the client to use
 ;                       this for all economy related things
@@ -895,7 +896,7 @@ SMTP_SERVER_PASSWORD=Some Password
 [SmartStart]
 Enabled=True
 URL=http://192.168.2.139:8001
-MachineID=219944112
+MachineID=209754288
 
 ;; For Joomla/jOpensim
 [CapsService]
