--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -1370,6 +1370,7 @@
     <None Include="Resources\ModulesHelp.txt" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\xls-icon-3398.png" />
     <None Include="Resources\welcome_toolbox.png" />
     <None Include="Resources\cubes_blue.png" />
     <None Include="Resources\1253433.png" />
