Make fake visitors in debug mode

--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -683,7 +683,7 @@
     </Compile>
     <Compile Include="MySettings.vb" />
     <Compile Include="Mysql.vb" />
-    <Compile Include="ClassRegionMaker.vb" />
+    <Compile Include="RegionMaker.vb" />
     <Compile Include="Search.vb" />
     <Compile Include="Services.vb" />
     <Compile Include="Settings.vb" />
