--- a/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/OpenSim.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/OpenSim.ini
@@ -1436,22 +1436,30 @@ GroupsExternalURI="${Const|BaseURL}:${Const|PublicPort}"
 Enabled=true
 ;
 ;
+
 [NPC]
-;
-;# {Enabled} {} {Enable Non Player Character (NPC) facilities} {true false} false
-Enabled=true
-;
-;
+;; Enable Non Player Character (NPC) facilities default true
+Enabled = true
+
+;; max number of NPCs per scene default: 40
+;; set to a negative value to allow any number
+;; note that a NPC is almost as heavy as a normal avatar, so you should limit them
+MaxNumberNPCsPerScene = 100
+
 ;; several options to control NPCs creation
+
 ;; allow NPCs to be created not Owned {true false} default: true
-; AllowNotOwned = false
+; AllowNotOwned = true
+
 ;; allow NPCs to set to be sensed as Avatars {true false} default: true
-; AllowSenseAsAvatar = false
+; AllowSenseAsAvatar = true
+
 ;; allow NPCs to created cloning any avatar in region {true false} default: true
-; AllowCloneOtherAvatars = false
+AllowCloneOtherAvatars = false
+
 ;; if true NPCs will have no group title, if false display "- NPC -" for easy identification {true false} default: true
-; NoNPCGroup = false
-;
+; NoNPCGroup = true
+
 ;
 [Terrain]
 ;
