--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -695,6 +695,7 @@
     <Compile Include="SmartStart.vb" />
     <Compile Include="ClassSorter.vb" />
     <Compile Include="Speech.vb" />
+    <Compile Include="TaskObject.vb" />
     <Compile Include="Teleport.vb" />
     <Compile Include="Testing.vb" />
     <Compile Include="Updater.vb" />
